--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
                     inicio donde vamos a explicar
                     las cosas increibles que se pueden
                     hacer con ramas<p>
+                <p><img src="imagenes/ave.jpg" width="100%"></p>
                 <p> Los blogs son la mejor
                     forma de compartir
                     información y tus ideas.
