--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 <img id="logo" src="imagenes/nave1.png"/>
                 Hyperblog
                 <span id="tagline"> Tu blog
-                    maestro </span>
+                    de confianza </span>
             </div>
             <div id="post">
                 <h1> Este es el titulo
